@@ -32,7 +32,8 @@ public class ConfigurableThreadFactory implements ThreadFactory
     /**
      * A default exception handler that simply logs the stack trace of the exception.
      */
-    private static final Thread.UncaughtExceptionHandler DEFAULT_EXCEPTION_HANDLER = new Thread.UncaughtExceptionHandler()
+    private static final Thread.UncaughtExceptionHandler DEFAULT_EXCEPTION_HANDLER
+        = new Thread.UncaughtExceptionHandler()
     {
         public void uncaughtException(Thread thread, Throwable throwable)
         {
